--- a/Cloth.css
+++ b/Cloth.css
@@ -11,27 +11,26 @@ body {
     background: black;
 	font-family: helvetica;
 }
+.spread-children {
+	text-align: justify;
+	font-size: 0.1px;
+}
 header {
 	margin-top:10px;
-	text-align: justify;
-	/* border:1px solid white; */
-	font-size: 0.1px;
 }
 p {
 	display:inline-block;
 	color:darkorange;
-	/* border:1px solid red; */
 	text-align: center;
 	font-size:24px;
 }
-header:after {
-  content: '';
-  width: 100%; /* Ensures there are at least 2 lines of text, so justification works */
-  display: inline-block;
+.spread-children:after {
+	content: '';
+	width: 100%; /* Ensures there are at least 2 lines of text, so justification works */
+	display: inline-block;
 }
 #c {
-    display: block;
-    margin: 20px auto 0 auto;
+	display: block;
+	margin: 20px auto 0 auto;
 	border:1px solid lightgrey;
-	/* background-color:white; */
 }
