--- a/Cloth.css
+++ b/Cloth.css
@@ -39,8 +39,9 @@ p {
 }
 .box{
 	position: absolute;
-	background-color: blue;
+	background-color: transparent;
 	width: 100px;
 	height: 100px;
+	border: 1px solid red;
 	border-radius: 6px;
 }
