--- a/Cloth.css
+++ b/Cloth.css
@@ -39,9 +39,11 @@ p {
 }
 .box{
 	position: absolute;
-	background-color: blue;
+	background-color: skyblue;
 	width: 100px;
 	height: 100px;
 	border: 1px solid blue;
+	line-height: 100px;
+	text-align: center;
 	border-radius: 6px;
 }
