--- a/Cloth.css
+++ b/Cloth.css
@@ -37,7 +37,7 @@ p {
 	margin: 20px auto 0 auto;
 	border:1px solid green;
 }
-.box{
+.dragbox{
 	position: absolute;
 	background-color: skyblue;
 	width: 100px;
