--- a/10-PyGrid.css
+++ b/10-PyGrid.css
@@ -24,7 +24,13 @@ header {
 
 p {
     display: inline-block;
-    color: darkorange;
+    color: yellow;
+    text-align: center;
+    font-size: 24px;
+}
+
+.help {
+    color: yellowgreen;
     text-align: center;
     font-size: 24px;
 }
