--- a/10-PyGrid.css
+++ b/10-PyGrid.css
@@ -51,11 +51,12 @@ p {
 }
 
 .dragbox {
+    font-weight: bold;
     position: absolute;
-    background-color: skyblue;
+    background-color: darkgrey;
     width: 10vw;
     height: 10vw;
-    border: 1px solid blue;
+    border: 1px solid darkgrey;
     line-height: 10vw;
     text-align: center;
     border-radius: 6px;
